img profile tweening now :)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<img src="avatar.png" alt="">
 	<h1 id="logo-text"><b>Raphaël </b>Martin</h1>
-	<p>Though my site is under construction, let's <a href="#">discover me</a>.</p>
+	<p>Although my site is under construction, let's <a href="#">discover me</a>.</p>
 	<a id="mail" class="social" href="#"></a>
 	<a id="twitter" class="social" href="https://twitter.com/raphaaelmartin" target="_blank"></a>
 	<a id="github" class="social" href="https://github.com/raphaelmartin" target="_blank"></a>
